fix spotbugs/checkstyle review